--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,9 +35,14 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    buildFeatures {
+        viewBinding true;
+    }
 }
 
 dependencies {
+
     implementation 'com.google.firebase:firebase-analytics'
     implementation platform('com.google.firebase:firebase-bom:31.1.0')
     implementation 'androidx.appcompat:appcompat:1.5.1'
@@ -47,6 +52,16 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // Scalable Size Unit (support for different  screen sizes)
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.intuit.ssp:ssp-android:1.0.6'
+//
+//
+//    //Rounded Imageview
+//    implementation 'com.makermen:roundedimageview:2.3.0'
+      implementation 'com.makeramen:roundedimageview:2.3.0'
+
 
     //firebase
     implementation 'com.google.firebase:firebase-messaging:23.1.1'
