--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,16 @@
 
 buildscript {
     repositories {
-        // Make sure that you have the following two repositories
-        google()  // Google's Maven repository
+        google()
+        mavenCentral()
+        maven {
+            url 'https://android-sdk.is.com/'
+        }
+        maven { url 'https://jitpack.io' }
 
-        mavenCentral()  // Maven Central repository
+        maven {
+            url "https://s3.amazonaws.com/smaato-sdk-releases/"
+        }
 
     }
     dependencies {
@@ -14,8 +20,6 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.14'
 
     }
-
-
 }
 
 plugins {
