--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -18,7 +19,7 @@
             android:windowSoftInputMode="adjustResize"
             android:exported="true"/>
         <activity
-            android:name=".activities.SignInActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize"
             >
@@ -29,12 +30,13 @@
             </intent-filter>
 
         </activity>
-        <activity android:name=".MainActivity"
+        <activity android:name=".activities.SignInActivity"
             android:exported="true"/>
 
         <service
             android:name=".firebase.MessagingService"
-            android:exported="false">
+            android:enabled="true"
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
