--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,23 +15,37 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BKZola"
         tools:targetApi="31">
-        <activity android:name=".activities.SignUpActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:exported="true"/>
+        <activity
+            android:name=".activities.VerifyOTPActivity"
+            android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".activities.SendOTPActivity"
+            android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".activities.SignUpActivity"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:windowSoftInputMode="adjustResize"
-            >
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".activities.SignInActivity"
-            android:exported="true"/>
+        <activity
+            android:name=".activities.SignInActivity"
+            android:exported="true" />
 
         <service
             android:name=".firebase.MessagingService"
