--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,8 +60,7 @@ dependencies {
 //
 //    //Rounded Imageview
 //    implementation 'com.makermen:roundedimageview:2.3.0'
-      implementation 'com.makeramen:roundedimageview:2.3.0'
-
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 
     //firebase
     implementation 'com.google.firebase:firebase-messaging:23.1.1'
@@ -70,4 +69,8 @@ dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:31.1.1')
     implementation 'com.google.firebase:firebase-auth'
+
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
 }
