--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,8 +74,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
 
     //libraries we need for now
-    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
-    implementation 'com.android.support.appcompat-v7:27.1.1'
+//    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+//    implementation 'com.android.support.appcompat-v7:27.1.1'
     //add this library and this
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
