--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,14 +49,15 @@ dependencies {
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-database:20.1.0'
+    implementation 'com.google.firebase:firebase-storage:20.1.0'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Scalable Size Unit (support for different  screen sizes)
-    implementation 'com.intuit.sdp:sdp-android:1.0.6'
-    implementation 'com.intuit.ssp:ssp-android:1.0.6'
+    implementation 'com.intuit.sdp:sdp-android:1.1.0'
+    implementation 'com.intuit.ssp:ssp-android:1.1.0'
 //
 //
 //    //Rounded Imageview
@@ -73,15 +74,16 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.1.1')
     implementation 'com.google.firebase:firebase-auth'
 
-    //libraries we need for now
-//    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
-//    implementation 'com.android.support.appcompat-v7:27.1.1'
+
     //add this library and this
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
     implementation 'com.github.bumptech.glide:glide:4.14.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+
 
 
 }
